environments/staging-argo/argo-ingress.yaml
# apps/argocd-ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:520137999268:certificate/6b2146df-6a15-4bcf-84a3-04db3ca6efe0
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: argocd.takeflight2.aligent.cloud
spec:
  rules:
    - host: argocd.takeflight2.aligent.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprints-addon-argocd-server
                port:
                  number: 443
